# sample

./: Amr  Description  Intent  Message  Shell.txt  assign  bfssearch.c  bubbles.html  candylite.html  exam  iot  java1.txt  jv3  latex  latexfull  oops.txt  postal_code  requirement  s2.txt  sharding  slitterio.html  sm.txt  tables
ai_postal_sorting_full/flask_app/: app.py  requirements.txt  utils.py
ai_postal_sorting_full/flask_app/static/: style.css
ai_postal_sorting_full/flask_app/templates/: index.html  result.html
ai_postal_sorting_full/ros_ws/src/parcel_sorting/: CMakeLists.txt  package.xml
ai_postal_sorting_full/ros_ws/src/parcel_sorting/launch/: parcel_sorting.launch
ai_postal_sorting_full/ros_ws/src/parcel_sorting/scripts/: letter_spawner_node.py  web_bridge_node.py
ai_postal_sorting_full/ros_ws/src/parcel_sorting/worlds/: conveyor_world.world
